# UELab

./: CMakeLists.txt  IDE_ndk.sh  README.md
jni/: Android.mk
jni/include/Android_draw/: draw.h
jni/include/Android_touch/: VectorStruct.h
jni/include/MyHpp/: Class.h  DrawFuntion.h  Function.h  RWTools.h  Setting.h
jni/src/: main.cpp
jni/src/Android_draw/: draw_Gui.cpp
jni/src/Android_touch/: TouchHelperA.cpp
